--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "mysql": "^2.15.0",
     "path": "^0.12.7",
     "squel": "^5.12.0"
   }
