--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "GSH",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mysql": "^2.15.0",
     "path": "^0.12.7",
